--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
 streamlit
-gspread
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-gspread-formatting
+pandas
 requests
 openpyxl
